Also turn off OPTION_MASK_ABI_X32 for -m16

PR target/63228
	* config/i386/i386.c (ix86_option_override_internal): Also turn
	off OPTION_MASK_ABI_X32 for -m16.

From-SVN: r215194